src/objects/Indemnizable_Partida__c.object
<CustomObject>
    <fields>
        <fullName>INDP_DIV_Importe__c</fullName>
        <label>Importe</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>INDP_LKP_Documento_Indemnizable__c</fullName>
        <label>Documento Indemnizable</label>
        <referenceTo>Indemnizable_Documento__c</referenceTo>
        <relationshipLabel>Partidas Indemnizable</relationshipLabel>
        <relationshipName>Indemnizable_Partidas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>INDP_SEL_Estado__c</fullName>
        <label>Estado</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Estados_Partida_Indemnizable</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>INDP_TXT_Descripcion__c</fullName>
        <label>Descripción</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>Indemnizable: Partida</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Identificador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Indemnizable: Partidas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>